exports[`test getSectionsCode() should return valid JS 1`] = `
"[{\'name\': \"Readme\",
\'content\': require(\"!!../loaders/examples-loader!./Readme.md\"),
\'components\': null,
\'sections\': null},
{\'name\': \"Components\",
\'content\': null,
\'components\': null,
\'sections\': null}]"
`;

exports[`test processSection() should return valid JS for section with components 1`] = `
"{\'name\': \"Components\",
\'content\': null,
\'components\': null,
\'sections\': null}"
`;

exports[`test processSection() should return valid JS for section with content 1`] = `
"{\'name\': \"Readme\",
\'content\': require(\"!!../loaders/examples-loader!./Readme.md\"),
\'components\': null,
\'sections\': null}"
`;
